--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <br>
     <div class="name">
-        <form action="next.html" method="post">
+        <form action="/next.html" method="post">
         <label>CUSTOMER NAME:</label>
         <input type="text" name="name">
         <br>
